code fixes.

Legend:

* -> Security Fix
# -> Issue Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

12-Jun-2012 Jean-Marie Simonet
 # [#28660] Fix code style errors. Thanks Jenkins and Rouven
 # [#28632] Backport JCrypt (only with the simple chipher). Thanks Rouven
 + [#28371] Improve user feedback during automatic version update. Thanks Mark

11-Jun-2012 Jean-Marie Simonet
 $ [#28371] Improve user feedback during automatic version update. Lang strings only!
 # [#28652] *Strict standards administrator/components/com_config/models/application.php
 ^ [#28380] *Normalizing Beez_20 css and js loading
 ^ [#28642] Clean up the installation a tiny bit. Thanks Rouven
 # [#28025] Joomla Bugfix: Exchange of wrong picture by hide.js fixed. Thanks Udo
 ^ [#28645] Clean up the session package based on what was done in the platform. Thanks Rouven
 $ Updating installation ini file th-TH

10-Jun-2012 Jean-Marie Simonet
 # [#28426] only a single JFormFieldColor field can exist (functionally) within a form. Thanks Dennis
 # [#28550] Default admin user created with id 42. Thanks Ofer
 # [#28646] *New user registration approval should only be possible when Create permission
 # [#28639] New User Account Activation Tooltip Clarification. Thanks Matt
 # [#28648] Backport some deprecation info to the base package. Thanks Rouven.

09-Jun-2012 Jean-Marie Simonet
 ^ [#28551] Fix some issues with exceptions. Thanks Rouven
 + [#28176] Media formfield: show preview. Thanks Benjamin
 + [#28383] Add the ability to limit the number of password resets within a time period. Thanks Mark
 
08-Jun-2012 Jean-Marie Simonet
 ^ [#28613] Use fewer deprecated methods. Thanks Rouven
 ^ [#28377] Backport JDatabase::execute(). Thanks Rouven.
 # [#28631] Bug in Codemirror plugin. Thanks Viet and Elijah
 # [#28603] User Registration Form: Label/Field Offset by one Line. Thanks Johannes
 # [#28525] Fix JForm::load() not replacing form field in same location. Thanks Aaron
